--- a/dashboard.html
+++ b/dashboard.html
@@ -275,6 +275,27 @@
         <div class="col-sm-9 col-sm-push-3">
             <div class="my-account-wrapper">
                 <h2>Dashboard</h2>
+
+                <div class="col-sm-6 col-md-4">
+                    <div class="dashboard-container">
+                        <span class="dashboard-icon-box"><i class="fa fa-pencil-square-o"></i></span>
+                        <span class="dashboard-title">Create Job</span><a id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyCareersQuiz_btnElem_hyperLink" href="job-posting.html"><span id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyCareersQuiz_btnElem_lblText">Create your job ad</span></a>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="dashboard-container">
+                        <span class="dashboard-icon-box"><i class="fa fa-suitcase"></i></span>
+                        <span class="dashboard-title">Current Open Jobs</span><a id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyResumeBuilder_btnElem_hyperLink" class="dashboard-text-lg" href="http://www.example.com/resumebuilderresulturl"><span id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyResumeBuilder_btnElem_lblText">6 Open Jobs</span></a>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4">
+                    <div class="dashboard-container">
+                        <span class="dashboard-icon-box"><i class="fa fa-users"></i></span>
+                        <span class="dashboard-title">Your Candidates</span><a id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyResumeBuilder_btnElem_hyperLink" class="dashboard-text-lg" href="http://www.example.com/resumebuilderresulturl">View and download applications for jobs</span></a>
+                    </div>
+                </div>
+
                 <div class="col-sm-6 col-md-4">
                     <div class="dashboard-container">
                         <span class="dashboard-icon-box"><i class="fa fa-cog"></i></span>
@@ -287,37 +308,7 @@
                         <span class="dashboard-title">My Downloads</span><a id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyDownloads_btnElem_hyperLink" href="http://www.skillsroad.com.au/my-account/my-downloads"><span id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyDownloads_btnElem_lblText">View my downloads</span></a>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4">
-                    <div class="dashboard-container">
-                        <span class="dashboard-icon-box"><i class="fa fa-pencil"></i></span>
-                        <span class="dashboard-title">Post a New Job</span><a id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyCareersQuiz_btnElem_hyperLink" href="job-posting.html"><span id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyCareersQuiz_btnElem_lblText">View the results of my Careers Quiz</span></a>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <div class="dashboard-container">
-                        <span class="dashboard-icon-box"><i class="fa fa-search"></i></span>
-                        <span class="dashboard-title">Current Live Jobs</span><a id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyResumeBuilder_btnElem_hyperLink" class="dashboard-text-lg" href="http://www.example.com/resumebuilderresulturl"><span id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyResumeBuilder_btnElem_lblText">View, edit and close current Live Jobs</span></a>
-                    </div>
-                </div>
 
-                <div class="col-sm-6 col-md-4">
-                    <div class="dashboard-container">
-                        <span class="dashboard-icon-box"><i class="fa fa-file-text-o"></i></span>
-                        <span class="dashboard-title">View Applications</span><a id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyResumeBuilder_btnElem_hyperLink" class="dashboard-text-lg" href="http://www.example.com/resumebuilderresulturl">View and download applications for jobs</span></a>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <div class="dashboard-container">
-                        <span class="dashboard-icon-box"><i class="fa fa-question"></i></span>
-                        <span class="dashboard-title">My Careers Quiz</span><a id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyCareersQuiz_btnElem_hyperLink" href="http://www.example.com/careersquizresulturl"><span id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyCareersQuiz_btnElem_lblText">View the results of my Careers Quiz</span></a>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <div class="dashboard-container">
-                        <span class="dashboard-icon-box"><i class="fa fa-tasks"></i></span>
-                        <span class="dashboard-title">My Resume Builder</span><a id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyResumeBuilder_btnElem_hyperLink" class="dashboard-text-lg" href="http://www.example.com/resumebuilderresulturl"><span id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyResumeBuilder_btnElem_lblText">0.72% complete</span></a>
-                    </div>
-                </div>
 
             </div>
         </div>
@@ -358,7 +349,7 @@
                     <td>
                         <span class="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView_0" id="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeViewt3">
                         <a href="job-posting.html" onmousedown="CMSTreeView_ItemSelect(this,&#39;p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView&#39;);" class="item-active"
-                        ><i class="fa fa-pencil"></i>Post a New Job</a>
+                        ><i class="fa fa-pencil-square-o"></i>Create Job</a>
                         </span>
                     </td>
                 </tr>
@@ -377,7 +368,7 @@
                     <td>
                         <span class="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView_0" id="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeViewt3">
                         <a href="http://www.skillsroad.com.au/my-account/my-downloads" onmousedown="CMSTreeView_ItemSelect(this,&#39;p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView&#39;);" class="item-active"
-                        ><i class="fa fa-search"></i>Current Live Jobs</a>
+                        ><i class="fa fa-suitcase"></i>Current Open Jobs</a>
                         </span>
                     </td>
                 </tr>
@@ -398,7 +389,7 @@
                     <td>
                         <span class="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView_0" id="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeViewt3">
                         <a href="http://www.skillsroad.com.au/my-account/my-downloads" onmousedown="CMSTreeView_ItemSelect(this,&#39;p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView&#39;);" class="item-active"
-                        ><i class="fa fa-file-text-o"></i>View Applications</a>
+                        ><i class="fa fa-users"></i>Your Candidates</a>
                         </span>
                     </td>
                 </tr>
@@ -407,15 +398,6 @@
 
         
 
-        <table cellpadding="0" cellspacing="0" style="border-width:0;">
-			<tbody><tr>
-				<td><div style="width:20px;height:1px"></div></td><td><img src="./dashboard_files/WebResource(3).axd" alt=""></td><td><span class="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView_0" id="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeViewt4"><a href="http://www.example.com/careersquizresulturl" onmousedown="CMSTreeView_ItemSelect(this,&#39;p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView&#39;);" class="item-active"><i class="fa fa-question"></i>My Careers Quiz</a></span></td>
-			</tr>
-		</tbody></table><table cellpadding="0" cellspacing="0" style="border-width:0;">
-			<tbody><tr>
-				<td><div style="width:20px;height:1px"></div></td><td><img src="./dashboard_files/WebResource(3).axd" alt=""></td><td><span class="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView_0" id="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeViewt5"><a href="http://www.example.com/resumebuilderresulturl" onmousedown="CMSTreeView_ItemSelect(this,&#39;p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView&#39;);" class="item-active"><i class="fa fa-tasks"></i>My Resume Builder</a></span></td>
-			</tr>
-		</tbody></table>
 	</div>
 </div><a id="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView_SkipLink"></a>
 </div>
