--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Styles for Skillsroad website -->
     <link href="http://www.skillsroad.com.au/CMSPages/GetResource.ashx?stylesheetname=skillsroad" type="text/css" rel="stylesheet"/>
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
+    <link href='http:http//fonts.googleapis.com/css?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -25,6 +25,7 @@
     <link href="http://www.skillsroad.com.au/CMSPages/GetResource.ashx?stylesheetfile=/App_Themes/Default/bootstrap-additional.css" type="text/css" rel="stylesheet"/>
     <link href="http://www.skillsroad.com.au/CMSPages/GetResource.ashx?stylesheetname=calendar" type="text/css" rel="stylesheet" media="screen"/>
     <link href="http://www.skillsroad.com.au/CMSPages/GetResource.ashx?_webparts=677" type="text/css" rel="stylesheet"/>
+    <link href="css/style.css" type="text/css" rel="stylesheet"/>
     <style type="text/css">
     .p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView_0 { text-decoration:none; }
     </style>
