--- a/dashboard-job-seeker.html
+++ b/dashboard-job-seeker.html
@@ -291,7 +291,7 @@
                 <div class="col-sm-6 col-md-4">
                     <div class="dashboard-container">
                         <span class="dashboard-icon-box"><i class="fa fa-file-text-o"></i></span>
-                        <span class="dashboard-title">My Application History</span><a id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyResumeBuilder_btnElem_hyperLink" class="dashboard-text-lg" href="http://www.example.com/resumebuilderresulturl">View application history</span></a>
+                        <span class="dashboard-title">Applied Jobs</span><a id="p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_pageplaceholder_p_lt_zoneContent_lnkMyResumeBuilder_btnElem_hyperLink" class="dashboard-text-lg" href="applied-jobs.html">View application history</span></a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4">
@@ -345,8 +345,8 @@
                     </td>
                     <td>
                         <span class="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView_0" id="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeViewt3">
-                        <a href="http://www.skillsroad.com.au/my-account/my-downloads" onmousedown="CMSTreeView_ItemSelect(this,&#39;p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView&#39;);" class="item-active"
-                        ><i class="fa fa-file-text-o"></i>My Application History</a>
+                        <a href="applied-jobs.html" class="item-active"
+                        ><i class="fa fa-file-text-o"></i>Applied Jobs</a>
                         </span>
                     </td>
                 </tr>
@@ -363,7 +363,8 @@
 			<tbody><tr>
 				<td><div style="width:20px;height:1px"></div></td><td><img src="./dashboard_files/WebResource(3).axd" alt=""></td><td><span class="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView_0" id="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeViewt5"><a href="http://www.example.com/resumebuilderresulturl" onmousedown="CMSTreeView_ItemSelect(this,&#39;p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView&#39;);" class="item-active"><i class="fa fa-tasks"></i>My Resume Builder</a></span></td>
 			</tr>
-		</tbody></table>
+		</tbody>
+		</table>
 	</div>
 </div><a id="p_lt_zoneContent_pageplaceholder_p_lt_zoneSideContent_treeSideNav_treeView_SkipLink"></a>
 </div>
